envoy.yaml
node:
  id: foo
  cluster: bar
static_resources:
  clusters:
    - name: ecds
      connect_timeout: 0.250s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ecds
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ecds
                      port_value: 1100
    - name: upstream-service
      connect_timeout: 0.250s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: google.com
                      port_value: 80
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 5000
      filter_chains:
        - filters:
            - name: hcm
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: upstream
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: upstream-service
                http_filters:
                  - name: experiments
                    config_discovery:
                      config_source:
                        api_config_source:
                          api_type: GRPC
                          transport_api_version: V3
                          grpc_services:
                          - envoy_grpc:
                              cluster_name: ecds
                      # apply_default_config_without_warming: true
                      default_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
                      type_urls:
                      - type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
                  - name: envoy.filters.http.router
                    typed_config: {}
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
